fix height of images to prevent content jumping

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -66,7 +66,7 @@ html
     @media (max-width: $desktop)
       padding: 50px
     img
-      max-height: 300px
+      height: 300px
     .content
       padding: 1em 0 0.5em 0
   
